--- a/.github/workflows/main_dating-app-hcmus.yml
+++ b/.github/workflows/main_dating-app-hcmus.yml
@@ -22,6 +22,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli@18
+
+      - name: Install deps and build angular app
+        run: |
+          cd dating-app
+          npm install
+          ng build
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
