--- a/.github/workflows/main_dating-app-hcmus.yml
+++ b/.github/workflows/main_dating-app-hcmus.yml
@@ -37,7 +37,9 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: |
+          cd API
+          dotnet build --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
