--- a/.github/workflows/main_dating-app-hcmus.yml
+++ b/.github/workflows/main_dating-app-hcmus.yml
@@ -42,7 +42,9 @@ jobs:
           dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: |
+          cd API
+          dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
